feat: 添加通知参数支持并更新本地化文本

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -997,7 +997,8 @@
       "paymentInfo": "Payment Info",
       "timeInfo": "Time Info",
       "localTime": "Local Time",
-      "requestResponseParams": "Request/Response Params"
+      "requestResponseParams": "Request/Response Params",
+      "notifyParams": "Callback Params"
     },
     "messageRecord": {
       "title": "Message Record",
